<resources>

    <string-array name="my_approves">
        <item>实名认证</item>
        <item>企业认证</item>
    </string-array>
    <string-array name="address_books">
        <item>发货人地址</item>
        <item>收货人地址</item>
    </string-array>
    <!--设置-->
    <string-array name="settings">
        <item>密码修改</item>
        <item>去评分</item>
        <item>意见反馈</item>
        <item>版本更新</item>
        <item>关于我们</item>
    </string-array>
    <!--状态提示-->
    <string-array name="status">
        <item>等待审核</item>
        <item>审核通过</item>
        <item>审核未通过</item>
        <item>未审核</item>
    </string-array>
    <!--状态提示-->
    <string-array name="bt_status">
        <item>等待审核</item>
        <item>审核通过</item>
        <item>重新审核</item>
        <item>提交审核</item>
    </string-array>
    <string name="app_name">骄阳物流</string>
    <string name="exit_app">再按一次,退出应用程序</string>
    <!--下拉刷新和上拉加载数据-->
    <string name="pullrefresh_header_pull_to_refresh">下拉刷新</string>
    <string name="pullrefresh_header_refresh">正在更新...</string>
    <string name="pullrefresh_footer_pull_to_refresh">上拉刷新</string>
    <string name="pullrefresh_time">最近更新:</string>
    <string name="pullrefresh_footer_refresh">正在加载...</string>
    <string name="pullrefresh_release_to_refresh">松开更新</string>
    <string name="pullrefresh_refresh_success">加载成功</string>
    <string name="pullrefresh_refresh_faile">加载失败</string>
    <string name="pullrefresh_refresh_more">查看更多</string>
    <string name="pullrefresh_refresh_not_more">没有更多</string>

    <!--Toast提示文字-->
    <string name="toast_edit_pwd_success">恭喜你\n密码修改已经成功！</string>



    <!--GuideActivity-->
    <string name="guide_start">开始体验</string>
    <string name="guide_select_driver">我是司机</string>
    <string name="guide_select_user">我是用户</string>

    <!--自定义DSearchView提示文字-->
    <string name="dsearch_hint">请输入骄阳物流订单编号</string>
    <!--自定义Dialog文字-->
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <!--自定义进度弹窗-->
    <string name="hard_loading">卖力加载中</string>
    <!--tab文字-->
    <string name="tab_home">首页</string>
    <string name="tab_msg">消息</string>
    <string name="tab_my">我的</string>
    <!--用户首页feature文字-->
    <string name="feature_online_order">在线下单</string>
    <string name="feature_time_price">时效价格</string>
    <string name="feature_good_trick">货物跟踪</string>
    <string name="feature_sign_order">签收订单</string>
    <string name="feature_release_records">发货记录</string>
    <string name="feature_customer_service">一键客服</string>
    <string name="tip">提示</string>
    <string name="title">标题</string>
    <string name="home_confirm_call">你确定拨打客服电话吗！</string>
    <string name="tip_no_call">没有权限拨打电话\n请你去安全中心手动授权！</string>
    <!--登陆相关的-->
    <string name="login">登陆</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="regist_now">立即注册</string>
    <string name="regist">注册</string>
    <string name="create_account">创建账号</string>
    <string name="input_bind_phone_number">请输入你绑定的手机号</string>
    <string name="input_verification_code">请输入短信验证码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="contact_customer_personal">请联系客服人员</string>
    <string name="repwd_tip">如果你绑定的手机无法接收手机验证短信</string>
    <string name="title_repwd">重置密码</string>
    <string name="finish">完成</string>
    <string name="reget_code">重获验证码</string>
    <string name="tip_input_mobile_pwd">请输入手机号或密码!</string>
    <string name="tip_input_code">请输入验证码！</string>
    <!--消息-->
    <string name="news_information">新闻资讯</string>
    <string name="news_detail">新闻详情</string>
    <string name="more_loading">正在加载</string>
    <string name="loaderror_click_reload">加载失败，点击重试</string>
    <string name="long_temp_text">我是一只小蜜蜂啊，飞啊，飞啊，飞到花丛中啊，嘎嘎嘎！哈哈，花朵好漂亮啊，踩啊踩啊</string>
    <string name="short_temp_text">小蜜蜂</string>
    <!--我的-->
    <string name="account_name">帐户名：</string>
    <string name="mobile">电话：</string>
    <string name="owner_approve">货主认证</string>
    <string name="address_book">地址薄</string>
    <string name="my_points">我的积分</string>
    <string name="recomment_friend">推荐给好友</string>
    <string name="msg_center">站内信</string>
    <string name="user_center">用户中心</string>
    <string name="my_approve">我的认证</string>
    <string name="setting">设置</string>
    <string name="check_status">审核状态:</string>
    <string name="check_status_uncheck">未上传</string>
    <string name="check_status_checking">审核中</string>
    <string name="check_status_checked">审核通过</string>
    <string name="realname">真实姓名</string>
    <string name="hint_realname">张三丰</string>
    <string name="idcard">身份证</string>
    <string name="hint_idcard">4305**********881X</string>
    <string name="idcard_num">身份证号</string>
    <string name="take_photo">拍照</string>
    <string name="please_select">请选择操作</string>
    <string name="open_photo">打开相册</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="linkman">联系人</string>
    <string name="_mobile">手机</string>
    <string name="fix_mobile">固话</string>
    <string name="host_area">所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="set_default_send_address">设为默认发货地址</string>
    <string name="edit_address">修改地址</string>
    <string name="page_address_tip">请完善好地址信息！</string>
    <string name="recommend_method_one">方法一：记不住朋友的手机号？试试快速通道</string>
    <string name="quick_channel">快速通道</string>
    <string name="recommend_method_two">方法二：手动输入朋友手机号</string>
    <string name="input_friend_mobile">输入朋友手机号</string>
    <string name="invite_friend">邀请好友</string>
    <string name="recommend_tip">提交手机号码后，系统会自动向货主飞速找车APP下载短信，货主可以自动直接点击连接或到应用市场下载</string>
    <string name="friend_list">好友列表</string>
    <string name="search">搜索</string>
    <string name="other">(其他)</string>
    <string name="avaible_score">可用积分</string>
    <string name="point_user_detail">积分使用明细</string>
    <string name="user1">1.积分达到500分，免费送线下洗车券一张</string>
    <string name="user2">2.积分达到1000分，免费送线下卡牌润滑油一桶</string>
    <string name="user3">3.兑换积分时，将APP生成的兑换码告知骄阳客服，客服录入系统后，骄阳会尽快告知领取礼品</string>
    <string name="user4">4.为感谢广大车主及货主对骄阳物流的支持，我们特设计了积分产品，你登陆、注册、打开等操作都会获得相应积分。</string>
    <string name="share">分享</string>
    <string name="send_order">发单</string>
    <string name="move_order">运单</string>
    <string name="point_add1">每天一次</string>
    <string name="point_add2">首次</string>
    <string name="point_add3">好友成功注册</string>
    <string name="point_add4">成功申单</string>
    <string name="point_add5">运单正式发运</string>
    <string name="point_add11">+50</string>
    <string name="point_add22">+50</string>
    <string name="point_add33">+100</string>
    <string name="point_add44">+100</string>
    <string name="point_add55">+100</string>
    <string name="point_detail">积分明细</string>
    <string name="exchange_recorder">兑换记录</string>
    <string name="exchange">兑换</string>
    <string name="add_receive_address">添加收货人地址</string>
    <string name="add_send_address">添加发货人地址</string>
    <string name="head_icon">头像</string>
    <string name="name">姓名</string>
    <string name="person_info">个人信息</string>
    <string name="qq">QQ</string>
    <string name="company_name">公司名称</string>
    <string name="hint_input_qq">请输入QQ号</string>
    <string name="upload_success">上传成功！</string>
    <string name="nick_name">昵称</string>
    <string name="hint_input_nickname">请输入昵称！</string>
    <string name="success_edit_nickname">修改昵称成功！</string>

    <!--登陆-->
    <string name="success_regist">注册成功</string>
    <string name="connect_net_error">网络连接失败！</string>
    <string name="tip_input_mobile">请输入手机号码！</string>
    <string name="tip_code_error">验证码错误！</string>
    <string name="tip_input_pwd">请输入密码！</string>
    <string name="tip_pwd_equals">两次输入密码不一致！</string>
    <!--在线下单-->
    <string name="detail_des_address">详细终点地址</string>
    <string name="detail_start_address">详细起点地址</string>
    <string name="goods_type">货物类型</string>
    <string name="size_or_weight">体积/重量</string>
    <string name="car_type">车型(尺柜)</string>
    <string name="receive_mobile">收货电话</string>
    <string name="remark">备注</string>
    <string name="immediately_order">立即下单</string>
    <string name="car_date">装车日期*</string>
    <string name="select_date">请选择日期</string>
    <string name="address_info">地址信息*</string>
    <string name="goods_info">货物信息*</string>
    <string name="launch_info">运载信息*</string>
    <string name="remark_hint">暂时没有任何疑问！</string>
    <string name="enter_info">报关信息*</string>
    <string name="enter_mainload">大陆报关</string>
    <string name="select_enter_type">请选择报关类型</string>
    <string name="select_size_or_weight">请填写体积/重量</string>
    <string name="enter_way">报关方式</string>
    <string name="select_enter_way">请选择报关方式</string>
    <string name="query">查询</string>
    <string name="detail_price">价格详情</string>
    <string name="hello">你好！</string>
    <string name="price_detail1">大陆运费</string>
    <string name="price_detail2">大陆报关费</string>
    <string name="price_detail3">香港报关费</string>
    <string name="price_detail4">公路仓单费</string>
    <string name="price_detail5">卸货费</string>
    <string name="logout">退出登录</string>
    <string name="hint_input_feedback">请输入你的意见！</string>
    <!--设置-->
    <string name="feedback">意见反馈</string>
    <string name="pwd_edit">密码修改</string>
    <string name="input_old_pwd">请输入原始密码！</string>
    <string name="tip_oldpwd_error">原始密码错误！</string>
    <string name="about_us">关于我们</string>
    <string name="tip_update">当前已是最新版本！</string>
    <string name="tip_no_support">暂不支持这项功能！</string>
    <string name="confirm_logout">确定退出吗？</string>
    <string name="thanks_feedback">非常感谢你的反馈！</string>
    <!--签收订单-->
    <string name="send_time">送达时间：</string>
    <string name="send_time_">已送到指定仓库，请确认签单！</string>
    <string name="goods_num">货运单号：</string>
    <string name="order_num">订单号：</string>
    <string name="hint_input_linkman">请输入联系人！</string>
    <string name="hint_input_fix_mobile">请输入固定电话！</string>
    <string name="hint_input_detail_address">请输入详细地址！</string>
    <string name="set_default_address">设为默认地址！</string>
    <string name="error_parse_json">解析Json文件出错！</string>
    <string name="success_add_send_address">添加发货地址成功！</string>
    <string name="success_delete_receive_address">删除收货人地址成功！</string>
    <string name="tip_delete">你确定删除吗？</string>
    <string name="submit_check_status">提交审核</string>
    <string name="hint_input_idcard_num">请输入身份证号！</string>
    <string name="hint_input_select_icon">请选择图片！</string>


</resources>

