<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_120"
        android:background="@color/menu_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/_tv_avaible_score"
            style="@style/base_text_style"
            android:text="@string/short_temp_text"
            android:textSize="@dimen/textsize_level6"/>

        <TextView
            style="@style/base_text_style"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/avaible_score"
            android:textSize="@dimen/textsize_level3"/>
    </LinearLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        android:background="@drawable/shape_bg_stoke_normal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/_tv_detail"
            style="@style/base_text_style"
            android:layout_marginLeft="@dimen/margin_40"
            android:drawableLeft="@mipmap/grade_detail"
            android:drawablePadding="@dimen/btn_padding1"
            android:gravity="center"
            android:text="@string/point_detail"
            android:textColor="@color/select_textcolor_gray_white"/>

        <TextView
            android:id="@+id/_tv_record"
            style="@style/base_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_40"
            android:drawableLeft="@mipmap/grade_exchange"
            android:drawablePadding="@dimen/btn_padding1"
            android:gravity="center"
            android:text="@string/exchange_recorder"
            android:textColor="@color/select_textcolor_gray_white"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_stoke_normal"
        android:orientation="vertical">

        <TextView
            style="@style/base_text_style"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/btn_padding1"
            android:text="@string/point_user_detail"
            android:textColor="@color/tv_normal2"
            android:textSize="@dimen/textsize_level3"/>

        <TextView
            style="@style/point_style"
            android:text="@string/user1"/>

        <TextView
            style="@style/point_style"
            android:text="@string/user2"/>

        <TextView
            style="@style/point_style"
            android:text="@string/user3"/>

        <TextView
            style="@style/point_style"
            android:text="@string/user4"
            android:layout_marginBottom="@dimen/margin_20"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height">

        <TextView
            android:text="@string/login"
            style="@style/point_style1"/>
        <TextView
            android:text="@string/regist"
            style="@style/point_style1"/>
        <TextView
            android:text="@string/share"
            style="@style/point_style1"/>
        <TextView
            android:text="@string/send_order"
            style="@style/point_style1"/>
        <TextView
            android:text="@string/move_order"
            style="@style/point_style1"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/shape_bg_stoke_normal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/point_add1"
            style="@style/point_style3"/>
        <TextView
            android:text="@string/point_add2"
            style="@style/point_style3"/>
        <TextView
            android:text="@string/point_add3"
            style="@style/point_style3"/>
        <TextView
            android:text="@string/point_add4"
            style="@style/point_style3"/>
        <TextView
            android:text="@string/point_add5"
            style="@style/point_style3"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/point_add11"
                style="@style/point_style3"/>
            <TextView
                android:text="@string/point_add22"
                style="@style/point_style3"/>
            <TextView
                android:text="@string/point_add33"
                style="@style/point_style3"/>
            <TextView
                android:text="@string/point_add44"
                style="@style/point_style3"/>
            <TextView
                android:text="@string/point_add55"
                style="@style/point_style3"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>